[package]
name = "metaone"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "metaone"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.5.5"
anchor-lang = {version="0.24.2", features = ["init-if-needed"]}
anchor-spl = "0.24.2"
spl-token = "3.2.0"
num_enum = "0.5.4"